--- a/_style-guide/assets/sass/style-guide.scss
+++ b/_style-guide/assets/sass/style-guide.scss
@@ -20,404 +20,17 @@ Boilerplate version: 1.0
 $sg-nav-colour:	$dark--1;
 $nav-width: 6.8rem;
 
-.sg-page-wrap {
-	margin-left: $nav-width;
-	position: relative;
-}
+@import "base/wrappers.scss";
+@import "base/content.scss";
+@import "base/icons.scss";
 
-//= MAIN NAV =================================================
+@import "components/doc-heading.scss";
+@import "components/nav.scss";
 
-.sg-main-nav {
-	background: $sg-nav-colour;
-	height: 100%;
-	left: 0;
-	position: fixed;
-	top: 0;
-	width: $nav-width;
-	z-index: 10;
-}
+@import "pages/colours.scss";
+@import "pages/article-helper.scss";
 
-.sg-main-nav__logo {
-	color: $pri;
-	display: block;
-	font-size: 3.2rem;
-	padding: 1.7rem 1rem;
-	text-align: center;
-}
 
-.sg-main-nav__link {
-	color: $white;
-	display: block;
-	line-height: 1;
-	padding: 2rem 2rem 2.3rem;
-	position: relative;
-	text-align: center;
-	transition: background $transition-speed;
-
-	&:hover,
-	&:focus {
-		background: $dark--2;
-	}
-
-	&.active {
-		color: $yellow--1;
-	}
-
-	[class^="sg-icon--"] {
-		font-size: 2.4rem;
-	}
-
-	&:hover .sg-main-nav__label {
-		opacity: 1;
-		left: 8.8rem;
-		visibility: visible;
-	}
-
-	&--detached {
-		bottom: 0;
-		left: 0;
-		position: absolute;
-		width: 100%;
-	}
-}
-
-.sg-main-nav__label {
-	background: $sg-nav-colour;
-	border-radius: $border-radius;
-	left: 7.8rem;
-	margin-top: -2.6rem;
-	opacity: 0;
-	padding: 1.5rem 2rem;
-	position: absolute;
-	top: 50%;
-	transition: opacity $transition-speed, left $transition-speed, visibility $transition-speed;
-	visibility: hidden;
-
-	&:before {
-		border-style: solid;
-		border-width: 1rem 1rem 1rem 0;
-		border-color: transparent $sg-nav-colour transparent transparent;
-		content: '';
-		margin-top: -1rem;
-		position: absolute;
-		left: -1rem;
-		top: 50%;
-	}
-}
-
-
-
-//= CONTENT ==================================================
-
-.sg-main-content {
-	padding: 4rem 2rem;
-}
-
-.sg-side-content {
-	background: #F2F0ED;
-	padding: 4rem 2rem;
-
-	.pull-quote {
-		margin: 3rem;
-
-		p {
-			padding: 0;
-			text-align: center;
-		}
-	}
-}
-
-@include respond-min( $mq-medium ) {
-
-	.sg-main-content {
-		padding: 4rem 6rem;
-	}
-
-	.sg-side-content {
-		padding: 4rem 6rem;
-	}
-
-}
-
-@include respond-min( $mq-large ) {
-
-	.sg-main-content {
-		float: right;
-		padding: 4rem 2rem;
-		width: 66.6666666667%;
-	}
-
-	.sg-side-content {
-		height: 100%;
-		padding: 4rem 2rem;
-		left: 0;
-		position: absolute;
-		top: 0;
-		width: 33.3333333333%;
-	}
-
-}
-
-@include respond-min( $mq-x-large ) {
-
-	.sg-main-content {
-		padding: 4rem 6rem;
-	}
-
-	.sg-side-content {
-		padding: 4rem 6rem;
-	}
-
-}
-
-
-
-//= DOC HEADER ===============================================
-
-.sg-doc-header__heading {
-	display: inline-block;
-}
-
-.sg-doc-header__button {
-	float: right;
-}
-
-
-
-//= COLOURS ==================================================
-
-.sg-grid {
-	margin-bottom: 6rem;
-}
-
-.sg-grid__list {
-	@include clearfix;
-	list-style: none;
-
-	&--details {
-		font-size: 0.8em;
-		list-style: none;
-		padding: 1rem .5rem .5rem;
-	}
-}
-
-.sg-grid__item {
-	margin-left: 0;
-
-	&--small {
-		border-radius: $border-radius;
-		padding: 3rem .5rem;
-		text-align: center;
-		transition: background $transition-speed;
-
-		&:hover {
-			background: $white;
-		}
-	}
-
-	&--details {
-		line-height: 1.2;
-		margin: .5rem 0 0;
-	}
-}
-
-.sg-grid__value {
-	&--colour {
-		font-weight: 600;
-	}
-
-	&--icon {
-		font-size: 0.8em;
-	}
-}
-
-.sg-grid__icon {
-	font-size: 3.2rem;
-}
-
-.sg-grid__colour {
-	border-radius: $border-radius;
-	height: 10rem;
-	width: 100%;
-	border-top: 3rem solid transparent;
-
-	&--pri { 
-		background: $pri; 
-		border-color: $pri--alt;
-	}
-
-	&--sec { 
-		background: $sec; 
-		border-color: $sec--alt;
-	}
-
-	&--ter { 
-		background: $ter; 
-		border-color: $ter--alt;
-	}
-
-	&--dark-1 { 
-		background: $dark--1; 
-	}
-
-	&--orange { 
-		background: $orange--1;
-		border-color: $orange--2;
-	}
-
-	&--red { 
-		background: $red--1;
-		border-color: $red--2;
-	}
-
-	&--purple { 
-		background: $purple--1;
-		border-color: $purple--2; 
-	}
-
-	&--blue { 
-		background: $blue--1; 
-		border-color: $blue--2;
-	}
-
-	&--dark-2 { 
-		background: $dark--2; 
-	}
-
-	&--grey-1 { 
-		background: $grey--1; 
-	}
-}
-
-@include respond-min( $mq-small ) {
-
-	.sg-grid__item {
-		margin-bottom: 1rem;
-
-		&--small {
-			@include column(6);
-			margin-bottom: 1rem;
-		}
-	}
-
-}
-
-@include respond-min( $mq-medium ) {
-
-	.sg-grid__item {
-		margin-bottom: 1rem;
-
-		&--small {
-			@include column(4);
-			margin-bottom: 1rem;
-		}
-
-		&--details {
-			display: inline-block;
-
-			& + & {
-				margin-left: 2rem;
-			}
-		}
-	}
-
-}
-
-@include respond-min( $mq-large ) {
-
-	.sg-grid {
-		margin-bottom: 4rem;
-	}
-
-	.sg-grid__item {
-		@include column(3);
-		margin-bottom: 1rem;
-
-
-		&--small {
-			@include column(3);
-			margin-bottom: 1rem;
-		}
-
-		&--details {
-			display: block;
-
-			& + & {
-				margin-left: 0;
-			}
-		}
-	}
-
-	.sg-grid__value {
-		display: block;
-	}
-
-}
-
-@include respond-min( $mq-x-large ) {
-
-	.sg-grid__item {
-		margin-bottom: 2rem;
-
-		&--small {
-			@include column(2);
-			margin-bottom: 2rem;
-		}
-	}
-
-	.sg-grid__value {
-		display: inline;
-	}
-
-}
-
-
-//= ARTICLE HELPER ===========================================
-
-.sg-article-helper__section {
-	margin-bottom: 6rem;
-}
-
-.sg-article-helper__list {
-	@include clearfix;
-	list-style: none;
-}
-
-.sg-article-helper__item {
-	@include clearfix;
-	margin-left: 0;
-
-	.label {
-		display: inline-block;
-		line-height: 1;
-		padding: 1.5rem 1rem;
-	}
-
-	.input--radio {
-		float: left;
-	}
-}
-
-@include respond-min( $mq-medium ) {
-
-	.sg-article-helper__list {
-		text-align: center;
-	}
-
-	.sg-article-helper__item {
-		@include column(2);
-
-		.label {
-			display: block;
-			padding: 0 0 1rem 0;
-		}
-
-		.input--radio {
-			float: none;
-		}
-	}
-
-}
 
 
 
@@ -456,44 +69,3 @@ $nav-width: 6.8rem;
 .sg-section__button {
 	float: right;
 }
-
-
-
-//= ICONS ====================================================
-
-@font-face {
-	font-family: 'sg-icon-font';
-	src:url('../fonts/sg-icon-font.eot?-40jj5h');
-	src:url('../fonts/sg-icon-font.eot?#iefix-40jj5h') format('embedded-opentype'),
-		url('../fonts/sg-icon-font.woff?-40jj5h') format('woff'),
-		url('../fonts/sg-icon-font.ttf?-40jj5h') format('truetype'),
-		url('../fonts/sg-icon-font.svg?-40jj5h#sg-icon-font') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-[class^="sg-icon--"], [class*=" sg-icon--"] {
-	font-family: 'sg-icon-font';
-	font-style: normal;
-	font-variant: normal;
-	font-weight: normal;
-	line-height: 1;
-	speak: none;
-	text-transform: none;
-
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
-.sg-icon--cross:before 			{ content: '\2421'; }
-.sg-icon--check:before 			{ content: '\2713'; }
-.sg-icon--help:before 			{ content: '\2753'; }
-.sg-icon--crop:before 			{ content: '\e201'; }
-.sg-icon--paintroller:before 	{ content: '\e225'; }
-.sg-icon--stamp:before 			{ content: '\e226'; }
-.sg-icon--text:before 			{ content: '\ed00'; }
-.sg-icon--layout:before 		{ content: '\eda0'; }
-.sg-icon--save:before 			{ content: '\1f4be'; }
-.sg-icon--download:before 		{ content: '\1f4e5'; }
-
