--- a/assets/sass/modules/article.scss
+++ b/assets/sass/modules/article.scss
@@ -8,7 +8,7 @@
 	text-align: center;
 }
 .article__list--meta {
-	margin-bottom: $line-height * 2;
+	margin-bottom: $line-height;
 }
 .article__item--meta {
 	display: inline-block;
