--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -74,7 +74,7 @@ Version: 1.0
 @import "modules/nav.scss";
 //@import "modules/nav-push.scss";
 //@import "modules/footer.scss";
-//@import "modules/article.scss";
+@import "modules/article.scss";
 //@import "modules/author.scss";
 //@import "modules/news.scss";
 //@import "modules/sidebar.scss";
