--- a/assets/sass/tools/variables.scss
+++ b/assets/sass/tools/variables.scss
@@ -13,6 +13,7 @@ $dark--2: 		#242424;
 $dark--3: 		#454545;
 $cream--1:		#FAF8F5;
 $cream--2:		#DAD5CD;
+$cream--3:		#F2F0ED;
 $grey--1: 		#8E8E8E;
 $grey--2:		#DFE7E9;
 
@@ -45,10 +46,10 @@ $ter--alt: 		$yellow--2;
 =========================================================== */
 
 $font-size--small:		2rem;
-$font-size--large:		2rem;
+$font-size--large:		2.2rem;
 $line-height:			1.4em;
-$type-scale--small:		1.200; //Perfect Fourth
-$type-scale--large:		1.200; //Perfect Fifth
+$type-scale--small:		1.125; //Major Second
+$type-scale--large:		1.200; //Minor Third
 
 /* ===========================================================
 
