--- a/assets/sass/typography/abbr.scss
+++ b/assets/sass/typography/abbr.scss
@@ -7,7 +7,7 @@
 =========================================================== */
 
 abbr {
-	color: $grey--1;
+	color: $pri;
 	font-variant: small-caps; // https://developer.mozilla.org/en-US/docs/CSS/font-variant
 	font-weight: 600;
 	text-transform: lowercase;
