--- a/assets/sass/base/tables.scss
+++ b/assets/sass/base/tables.scss
@@ -12,7 +12,7 @@
 	width: 100%;
 }
 
-.table {
+table {
 	border-bottom: $border-width solid $border-colour;
 	border-collapse: collapse;
 	border-spacing: 0;
