--- a/assets/sass/tools/variables.scss
+++ b/assets/sass/tools/variables.scss
@@ -1,43 +1,15 @@
-$old-ie: false!default;
-
 /* ===========================================================
 
 	#COLOURS
 
 =========================================================== */
 
-$white: 		#FFFFFF;
-$black: 		#000000;
 $dark--1: 		#2D2D2D;
-$dark--2: 		#242424;
-$dark--3: 		#454545;
-$cream--1:		#FAF8F5;
-$cream--2:		#DAD5CD;
-$cream--3:		#F2F0ED;
-$grey--1: 		#8E8E8E;
-$grey--2:		#DFE7E9;
 
 $green--1: 		#57B275;
-$green--2: 		#4CA769;
-$pink--1: 		#F05D71;
-$pink--2: 		#ED5265;
-$yellow--1: 	#F2D044;
-$yellow--2: 	#F2D044;
-$purple--1: 	#8682D7;
-$purple--2: 	#7A76D0;
-$blue--1:		#07ABCA;
-$blue--2: 		#05A0C2;
-$orange--1: 	#F49E39;
-$orange--2: 	#F29231;
-$red--1: 		#EC4E50;
-$red--2: 		#E84345;
 
 $pri: 			$green--1;
-$pri--alt: 		$green--2;
-$sec: 			$pink--1;
-$sec--alt: 		$pink--2;
-$ter: 			$yellow--1;
-$ter--alt: 		$yellow--2;
+$sec: 			$dark--1;
 
 /* ===========================================================
 
@@ -57,10 +29,10 @@ $type-scale--large:		1.200; //Minor Third
 
 =========================================================== */
 
-$text-colour:			$dark--2;
-$background-colour:		$cream--1;
-$border-colour:			$cream--2;
-$highlight-colour:		$grey--2;
+$text-colour:			$sec;
+$background-colour:		#fff;
+$border-colour:			$sec;
+$highlight-colour:		$sec;
 
 $padding--small:		4rem;
 $padding--medium:		6rem;
@@ -68,7 +40,7 @@ $padding--large:		8rem;
 
 $border-width: 			.2rem;
 $border-radius: 		.4rem;
-$transition-speed: 		.3s;
+$speed: 				.3s;
 
 /* ===========================================================
 
