Cleanup: Boilerplate stripped to basics

--- a/assets/sass/modules/footer.scss
+++ b/assets/sass/modules/footer.scss
@@ -1,20 +1,5 @@
-// ===========================================================
-//
-//	$FOOTER
-//
-// ===========================================================
+/* ===========================================================
 
-.page-footer {
-	background: $dark--1;
-	color: $white;
-	padding: 6rem 0;
-}
-.page-footer .nav__list {
+	#FOOTER
 
-}
-.page-footer .nav__item {
-
-}
-.page-footer .nav__link {
-
-}
+=========================================================== */
