--- a/assets/sass/tools/reset.scss
+++ b/assets/sass/tools/reset.scss
@@ -1,8 +1,8 @@
-// ===========================================================
-//
-//	$RESET
-//
-// ===========================================================
+/* ===========================================================
+
+  #RESET
+
+=========================================================== */
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -29,10 +29,6 @@ time, mark, audio, video, button {
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
   	display: block;
-}
-
-.preload * {
-    transition: none!important;
 }
 
 * {
