--- a/assets/css/dev/style.css
+++ b/assets/css/dev/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* ===========================================================
                                               
         ,--.           ,--.               
@@ -48,6 +47,11 @@ Authors: Rob & Kev Simpson
 	#MEDIA QUERIES
 
 =========================================================== */
+/* ===========================================================
+
+  #RESET
+
+=========================================================== */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -75,10 +79,6 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
-.preload * {
-  transition: none !important;
-}
-
 * {
   box-sizing: border-box;
   outline: none;
@@ -101,13 +101,6 @@ button {
 }
 .clearfix:after {
   clear: both;
-}
-
-.hide-text {
-  left: -100%;
-  overflow: hidden;
-  position: absolute;
-  top: -100%;
 }
 
 /* TYPOGRAPHY
@@ -162,11 +155,6 @@ em {
   font-style: italic;
 }
 
-small,
-.small {
-  font-size: 65%;
-}
-
 ::-moz-selection {
   background: #2d2d2d;
 }
@@ -186,20 +174,23 @@ small,
 h1,
 h2,
 h3,
-h4,
-h5,
-h6,
 .tera,
 .giga,
 .mega,
 .alpha,
 .beta,
-.gamma,
+.gamma {
+  font-weight: 700;
+  line-height: 1.1;
+}
+
+h4,
+h5,
+h6,
 .delta,
 .epsilon,
 .zeta {
-  font-weight: bold;
-  line-height: 1.1;
+  font-weight: 500;
 }
 
 .tera {
@@ -291,21 +282,14 @@ li:last-child {
 
 /* ===========================================================
 
-	#CODE
-
-=========================================================== */
-code {
-  font-family: monospace;
-  line-height: 1.4em;
-  overflow-x: auto;
-  word-break: break-word;
-}
-
-/* ===========================================================
-
 	#SMALL
 
 =========================================================== */
+small,
+.small {
+  font-size: 65%;
+}
+
 .small-caps {
   color: #57b275;
   font-family: monospace;
@@ -314,92 +298,6 @@ code {
   font-weight: 600;
   letter-spacing: 0.125em;
   text-transform: lowercase;
-}
-
-/* ===========================================================
-
-	#ABBR
-
-	<abbr title="hyper text markup language">HTML</abbr>
-
-=========================================================== */
-abbr {
-  color: #57b275;
-  font-variant: small-caps;
-  font-weight: 600;
-  text-transform: lowercase;
-}
-
-abbr[title] {
-  cursor: help;
-}
-
-/* ===========================================================
-
-	#BLOCKQUOTE
-
-	<figure class="figure--blockquote">
-		<blockquote class="blockquote" cite="">
-			<p></p>
-		</blockquote>
-		<figcaption>
-			<cite>
-				<small><a href=""></a></small>
-			</cite>
-		</figcaption>
-	</figure>
-
-=========================================================== */
-.figure--blockquote {
-  margin: 2rem auto;
-}
-
-.blockquote {
-  color: #57b275;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
-  text-indent: 2em;
-}
-
-.blockquote + figcaption {
-  display: block;
-  font-size: inherit;
-  text-align: right;
-}
-
-.blockquote + figcaption:before {
-  content: '-';
-}
-
-/* ===========================================================
-
-	#PULLQUOTE
-
-	<aside class="pull-quote">
-		<blockquote>
-			<p></p>
-		</blockquote>
-	</aside>
-
-=========================================================== */
-.pull-quote {
-  position: relative;
-  padding: 1em;
-}
-.pull-quote:before, .pull-quote:after {
-  font-size: 4em;
-  opacity: .3;
-  position: absolute;
-}
-.pull-quote:before {
-  content: '“';
-  left: 0;
-  top: 2rem;
-}
-.pull-quote:after {
-  bottom: -2rem;
-  content: '”';
-  right: 0;
 }
 
 /* BASE
@@ -667,23 +565,30 @@ th {
 
 /* MODULES
 =========================================================== */
-.article__header {
-  text-align: center;
-}
+/* ===========================================================
 
-.article__list--meta {
-  margin-bottom: 1.4em;
-}
+	#HEADER
 
-.article__item--meta {
-  display: inline-block;
-  padding-right: 1.4em;
-}
-.article__item--meta:last-child {
-  padding-right: 0;
-}
+=========================================================== */
+/* ===========================================================
 
+	#NAV
+
+=========================================================== */
+/* ===========================================================
+
+	#FOOTER
+
+=========================================================== */
 /* PAGES
+=========================================================== */
+/* PLEASE DON'T REMOVE
+=========================================================== */
+/* ===========================================================
+
+	This must be included at the end of every other SCSS file
+	so media queries are always combined in the right order
+
 =========================================================== */
 
 /*# sourceMappingURL=style.css.map */
