--- a/assets/sass/tools/mq.scss
+++ b/assets/sass/tools/mq.scss
@@ -1,9 +1,9 @@
-// ===========================================================
-//
-//	This must be included at the end of every other SCSS file
-//	so media queries are always combined in the right order
-//
-// ===========================================================
+/* ===========================================================
+
+	This must be included at the end of every other SCSS file
+	so media queries are always combined in the right order
+
+=========================================================== */
 
 @include respond-min( $mq-small ) {
 
