--- a/assets/sass/typography/small.scss
+++ b/assets/sass/typography/small.scss
@@ -4,6 +4,11 @@
 
 =========================================================== */
 
+small,
+.small {
+	font-size: 65%;
+}
+
 .small-caps {
 	color: $pri;
 	font-family: monospace;
