--- a/assets/sass/tools/grid.scss
+++ b/assets/sass/tools/grid.scss
@@ -4,9 +4,9 @@
 
 =========================================================== */
 $total_columns: 	12;			// 				//
-$total_width:		960px; 		// px|100% 		// px = fixed, 100% = fluid
+$total_width:		100%; 		// px|100% 		// px = fixed, 100% = fluid
 $gutter_width:		1%;			// px|%			// px = fixed, % = fluid
-$container_margin:	1%;			// auto|px|%	//
+$container_margin:	0;			// auto|px|%	//
 
 $class_container:	'row';		//				//
 $class_column:		'col';		//				//
