Created build folder and changed grunt file to compile assets

--- a/assets/sass/base/buttons.scss
+++ b/assets/sass/base/buttons.scss
@@ -9,9 +9,7 @@
 	display: inline-block;
 	line-height: 1;
 	padding: 1rem 1.5rem;
-	transition: background $speed ease, 
-				border $speed ease, 
-				color $speed ease;
+	transition: background $speed ease, border $speed ease, color $speed ease;
 }
 
 .button--large {
