--- a/assets/sass/base/figure.scss
+++ b/assets/sass/base/figure.scss
@@ -1,8 +1,8 @@
-// ===========================================================
-//
-//	$FIGCAPTION
-//
-// ===========================================================
+/* ===========================================================
+
+	#FIGURE
+
+=========================================================== */
 
 figcaption {
 	font-size: 1.6rem;
