--- a/assets/sass/tools/variables.scss
+++ b/assets/sass/tools/variables.scss
@@ -19,8 +19,8 @@ $sec: 			$dark--1;
 $font-size--small:		2rem;
 $font-size--large:		2.2rem;
 $line-height:			1.4em;
-$type-scale--small:		1.125; //Major Second
-$type-scale--large:		1.200; //Minor Third
+$type-scale--small:		1.125;
+$type-scale--large:		1.200;
 
 /* ===========================================================
 
