--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,9 +34,24 @@ Authors: Rob & Kev Simpson
 =========================================================== */
 /* ===========================================================
 
-	#GRID
+	src: profoundgrid.com
 
 =========================================================== */
+/**
+ * Clearfix
+ */
+/**
+ * Legacy Clearfix
+ */
+/**
+ * Establish the grid-containing element.
+ */
+/**
+ * Align an element to the grid.
+ */
+/**
+ * Apply to any column to make it the last one of the current row.
+ */
 /* ===========================================================
 
 	#UTILS
@@ -80,6 +95,7 @@ footer, header, hgroup, menu, nav, section {
 }
 
 * {
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   outline: none;
 }
@@ -122,6 +138,9 @@ button {
   color: #2d2d2d;
   font-family: 'Proxima-Nova-Soft', Arial, Helvetica, Geneva, sans-serif;
   font-size: 2rem;
+  -webkit-font-feature-settings: 'liga', 'kern';
+  -moz-font-feature-settings: 'liga', 'kern';
+  font-feature-settings: 'liga', 'kern';
   -webkit-font-kerning: normal;
   -moz-font-kerning: normal;
   font-kerning: normal;
@@ -165,6 +184,12 @@ em {
 
 ::-moz-selection {
   background: #2d2d2d;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
+  p {
+    letter-spacing: 0.01em;
+    word-spacing: 0.01em;
+  }
 }
 /* ===========================================================
 
@@ -255,6 +280,7 @@ h6,
 =========================================================== */
 a {
   color: #57b275;
+  -webkit-transition: color 0.3s ease;
   transition: color 0.3s ease;
 }
 a:hover {
@@ -351,6 +377,7 @@ body:after {
   display: inline-block;
   line-height: 1;
   padding: 1rem 1.5rem;
+  -webkit-transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
   transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
 }
 
@@ -375,6 +402,16 @@ body:after {
   background: #2d2d2d;
   color: #fff;
 }
+
+@media only screen and (max-width: 37.49em) {
+  .button {
+    width: 100%;
+  }
+
+  .button + .button {
+    margin-top: 1em;
+  }
+}
 /* ===========================================================
 
 	#IMAGES
@@ -388,6 +425,11 @@ img {
 /* ===========================================================
 
 	#ICONS
+
+=========================================================== */
+/* ===========================================================
+
+	#FIGURE
 
 =========================================================== */
 figcaption {
@@ -408,6 +450,7 @@ textarea {
   border-radius: 0.4rem;
   margin: 0;
   padding: 1rem;
+  -webkit-transition: border 0.3s ease;
   transition: border 0.3s ease;
   width: 100%;
 }
@@ -440,7 +483,7 @@ label[for] {
 	#SELECT
 
 =========================================================== */
-select-wrap {
+.select-wrap {
   position: relative;
 }
 
@@ -454,7 +497,7 @@ select {
   -moz-appearance: none;
 }
 
-select-wrap:after {
+.select-wrap:after {
   color: #2d2d2d;
   content: '\25BE';
   padding: 12rem 15rem;
@@ -486,6 +529,7 @@ input[type="checkbox"] {
   cursor: pointer;
   line-height: 1;
   vertical-align: middle;
+  -webkit-transition: background 0.3s, border 0.3s;
   transition: background 0.3s, border 0.3s;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -582,6 +626,11 @@ th {
 =========================================================== */
 /* PAGES
 =========================================================== */
+/* ===========================================================
+
+	#HOME
+
+=========================================================== */
 /* PLEASE DON'T REMOVE
 =========================================================== */
 /* ===========================================================
@@ -590,9 +639,15 @@ th {
 	so media queries are always combined in the right order
 
 =========================================================== */
-
-/*# sourceMappingURL=style.css.map */
-
+@media only screen and (min-width: 37.5em) {
+  .wrap {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .foo {
+    color: #f00;
+  }
+}
 @media only screen and (min-width: 50em) {
   body,
   input,
@@ -668,22 +723,6 @@ th {
     color: #f00;
   }
 }
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  p {
-    letter-spacing: 0.01em;
-    word-spacing: 0.01em;
-  }
-}
-
-@media only screen and (min-width: 37.5em) {
-  .wrap {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-  .foo {
-    color: #f00;
-  }
-}
 @media only screen and (min-width: 62.5em) {
   .section {
     padding-top: 8rem;
@@ -693,17 +732,11 @@ th {
     color: #f00;
   }
 }
-
-@media only screen and (max-width: 37.49em) {
-  .button {
-    width: 100%;
-  }
-
-  .button + .button {
-    margin-top: 1em;
+@media only screen and (min-width: 80em) {
+  .foo {
+    color: #f00;
   }
 }
-
 @media only screen and (min-width: 93.75em) {
   figcaption {
     line-height: 1.3;
@@ -714,11 +747,6 @@ th {
     left: -18rem;
     width: 15rem;
   }
-  .foo {
-    color: #f00;
-  }
-}
-@media only screen and (min-width: 80em) {
   .foo {
     color: #f00;
   }
