Added Jeet grid to boilerplate

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -15,7 +15,8 @@ Authors: 	Rob Simpson & Kev Simpson
 =========================================================== */
 
 @import 'utils/variables.scss',
-		'utils/mixins';
+		'utils/mixins',
+		'utils/grid';
 
 @import 'base/reset',
 		'base/text',
