--- a/assets/sass/utils/variables.scss
+++ b/assets/sass/utils/variables.scss
@@ -50,6 +50,19 @@ $transition-speed: 		.3s;
 
 /* ===========================================================
 
+	# GRID SETTINGS
+
+=========================================================== */
+
+$jeet-gutter:           3      			!default;
+$jeet-parent-first:     false  			!default;
+$jeet-layout-direction: "LTR"  			!default;
+$jeet-max-width:        1410px 			!default;
+
+
+
+/* ===========================================================
+
 	# MEDIA QUERIES
 
 =========================================================== */
