--- a/assets/sass/base/forms.scss
+++ b/assets/sass/base/forms.scss
@@ -12,7 +12,7 @@ textarea {
 	border-radius: $border-radius;
 	padding: 1rem 1.5rem;
 	resize: none;
-	transition: border $transition-speed ease;
+	transition: border $speed ease;
 	width: 100%;
 
 	-webkit-appearance: none;
