--- a/assets/sass/base/buttons.scss
+++ b/assets/sass/base/buttons.scss
@@ -10,9 +10,9 @@
 	display: inline-block;
 	line-height: 1;
 	padding: 1.5rem 2rem;
-	transition: background $transition-speed ease,
-				box-shadow $transition-speed ease,
-				color $transition-speed ease;
+	transition: background $speed ease,
+				box-shadow $speed ease,
+				color $speed ease;
 
 	&:hover,
 	&:focus {
