Created article type index page added responsive vid

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -26,7 +26,8 @@ Authors: 	Rob Simpson & Kev Simpson
 		'base/lists',
 		'base/forms',
 		'base/tables',
-		'base/media';
+		'base/media',
+		'base/video';
 
 @import 'layout/page',
 		'layout/wrap',
