--- a/assets/sass/base/media.scss
+++ b/assets/sass/base/media.scss
@@ -9,20 +9,38 @@ img {
   	vertical-align: top;
 }
 
-.media--large {
-	margin: $padding--small 0;
-	position: relative;
-
+.media {
 	img {
 		border-radius: $border-radius;
 		width: 100%;
 	}
 }
 
+.media--large {
+	margin: $padding--small 0;
+	position: relative;
+}
+
 @include respond-min( $mq-medium ) {
 
 	.media--large {
 		margin: $padding--medium 0;
+	}
+
+	.media--left,
+	.media--right {
+		margin-bottom: $line-height;
+		width: 40%;
+	}
+
+	.media--left {
+		float: left;
+		margin-right: $line-height;
+	}
+
+	.media--right {
+		float: right;
+		margin-left: $line-height;
 	}
 
 }
