Added lazy load assets to project

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -26,8 +26,7 @@ Authors: 	Rob Simpson & Kev Simpson
 		'base/lists',
 		'base/forms',
 		'base/tables',
-		'base/media',
-		'base/video';
+		'base/media';
 
 @import 'layout/page',
 		'layout/wrap',
