--- a/assets/sass/base/media.scss
+++ b/assets/sass/base/media.scss
@@ -9,9 +9,35 @@ img {
   	vertical-align: top;
 }
 
+.no-js {
+	.lazyload {
+		display: none;
+	}
+}
+
 .media {
 	img {
 		border-radius: $border-radius;
+		width: 100%;
+	}
+}
+
+.media--video {
+	position: relative;
+
+	&:before {
+		content: '';
+		display: block;
+		padding-top: 56.25%;
+	}
+
+	iframe,
+	object,
+	embed {
+		height: 100%;
+		left: 0;
+		position: absolute;
+		top: 0;
 		width: 100%;
 	}
 }
