--- a/root/assets/sass/utils/variables.scss
+++ b/root/assets/sass/utils/variables.scss
@@ -26,6 +26,7 @@ $ter: #F2D044;
 
 =========================================================== */
 
+$font-family:			Arial, Helvetica, Geneva, sans-serif;
 $font-size--small:		2rem;
 $font-size--large:		2.2rem;
 $line-height:			1.4em;
