--- a/root/assets/sass/base/text.scss
+++ b/root/assets/sass/base/text.scss
@@ -14,7 +14,7 @@ textarea,
 select,
 button {
 	color: $text-colour;
-	font-family: Arial, Helvetica, Geneva, sans-serif;
+	font-family: $font-family;
 	font-size: $font-size--small;
 	font-feature-settings: 'liga', 'kern'; // http://elliotjaystocks.com/blog/kerning/
 	font-kerning: normal;
