--- a/root/assets/sass/components/carousel.scss
+++ b/root/assets/sass/components/carousel.scss
@@ -4,17 +4,17 @@
 
 =========================================================== */
 
-.carousel {
+.c-carousel {
 	overflow: hidden;
 }
 
-.carousel__list {
+.c-carousel__list {
 	@include clearfix;
 	margin-bottom: $line-height;
 	transition: transform $speed ease;
 }
 
-.carousel__item {
+.c-carousel__item {
 	float: left;
 
 	img {
@@ -26,25 +26,25 @@
 
 //= NAV ======================================================
 
-.carousel__navigation {
+.c-carousel__navigation {
 	background: $border-colour;
 	border-radius: 10rem;
 	position: relative;
 }
 
-.carousel__nav-list {
+.c-carousel__nav-list {
 	@include clearfix;
 	list-style: none;
 	position: relative;
 	z-index: 1;
 }
 
-.carousel__nav-item {
+.c-carousel__nav-item {
 	float: left;
 	margin: 0;
 }
 
-.carousel__button {
+.c-carousel__button {
 	display: block;
 	padding: 17px;
 	transition: color $speed ease;
@@ -55,7 +55,7 @@
 	}
 }
 
-.carousel__slider {
+.c-carousel__slider {
 	background: $pri;
 	border-radius: 10rem;
 	height: 100%;
@@ -65,21 +65,21 @@
 	transition: transform $speed ease;
 }
 
-.carousel--2 {
+.c-carousel--2 {
 	.carousel__nav-item,
 	.carousel__slider {
  		width: 50%;
 	}
 }
 
-.carousel--3 {
+.c-carousel--3 {
 	.carousel__nav-item,
 	.carousel__slider {
  		width: 33.3333333333%;
 	}
 }
 
-.carousel--4 {
+.c-carousel--4 {
 	.carousel__nav-item,
 	.carousel__slider {
  		width: 25%;
