--- a/root/assets/sass/layout/page.scss
+++ b/root/assets/sass/layout/page.scss
@@ -8,14 +8,14 @@ html {
 	height: 100%;
 }
 
-.page {
+.o-page {
 	background: $background-colour;
 	display: flex;
 	flex-direction: column;
 	min-height: 100%;
 }
 
-.page__content {
+.o-page__content {
 	flex: 1;
 	width: 100%;
 	-ms-flex-preferred-size: auto;	// IE10 tweener syntax
