--- a/root/assets/sass/layout/section.scss
+++ b/root/assets/sass/layout/section.scss
@@ -4,14 +4,14 @@
 
 =========================================================== */
 
-.section {
+.o-section {
 	padding-bottom: $padding--small;
 	padding-top: $padding--small;
 }
 
 @include respond-min( $mq-small ) {
 
-	.section {
+	.o-section {
 		padding-bottom: $padding--medium;
 		padding-top: $padding--medium;
 	}
@@ -20,7 +20,7 @@
 
 @include respond-min( $mq-medium ) {
 
-	.section {
+	.o-section {
 		padding-bottom: $padding--large;
 		padding-top: $padding--large;
 	}
