--- a/root/assets/sass/layout/wrap.scss
+++ b/root/assets/sass/layout/wrap.scss
@@ -4,33 +4,33 @@
 
 =========================================================== */
 
-.wrap {
+.o-wrap {
 	margin-left: auto;
 	margin-right: auto;
 	padding-left: 1.5rem;
 	padding-right: 1.5rem;
 }
 
-.wrap--center {
+.o-wrap--center {
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.wrap--medium {
+.o-wrap--medium {
 	max-width: 75rem;
 }
 
-.wrap--large {
+.o-wrap--large {
 	max-width: 92rem;
 }
 
-.wrap--x-large {
+.o-wrap--x-large {
 	max-width: 140rem;
 }
 
 @include respond-min( $mq-small ) {
 
-	.wrap {
+	.o-wrap {
 		padding-left: 2rem;
 		padding-right: 2rem;
 	}
@@ -39,7 +39,7 @@
 
 @include respond-min( $mq-medium ) {
 
-	.wrap {
+	.o-wrap {
 		padding-left: 4rem;
 		padding-right: 4rem;
 	}
