updated sass structure to ITCSS

--- a/root/assets/sass/base/button.scss
+++ b/root/assets/sass/base/button.scss
@@ -1,15 +1,11 @@
 /* ===========================================================
 
-	# ANCHOR
+	# BUTTON
 
 =========================================================== */
 
-a {
-	color: $link-colour;
-	transition: color $speed ease;
-
-	&:hover,
-	&:focus {
-		color: $link-colour-hover;
-	}
+button {
+	background: none;
+	border: none;
+	cursor: pointer;
 }
